--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ a{
 
 .main-content .first p{
     margin: 0px;
-    font-size:24px ;
+    font-size:26px ;
     font-family:'Roboto Mono', sans-serif ;
 
 }
@@ -124,6 +124,7 @@ a{
     writing-mode: vertical-lr;
     background-color: black;
     color: white;
+    display: flex;
 }
 
 .main-content .three .bw{
@@ -134,7 +135,7 @@ a{
 .main-content .three p{
     font-family: 'Roboto Mono', sans-serif;
     margin: 0px;
-    font-size: 28px;
+    font-size: 30px;
     margin-bottom:2px;
     padding: 5px;
 }
