--- a/style.css
+++ b/style.css
@@ -130,23 +130,56 @@ a{
 .main-content .three .bw{
     height: auto;
     width: 100%;
-    max-width: 224px;
+    max-width: 228px;
 }
 
 .main-content .three .vw{
-    height: auto;
+    height: 337px;
     width: 100%;
     max-width: 250px;
 }
 
 .main-content .three p{
     font-family: 'Roboto Mono', sans-serif;
-    margin: 0px;
-    font-size: 30px;
+    background-color: white;
+    margin: 2px;
+    font-size: 26px;
     margin-bottom:2px;
     padding: 5px;
-    border: 5px solid;
     margin-right: 5px;
+    position: relative;
+}
+
+.main-content .three .glow{
+    position: relative;
+    padding:10px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+
+.glow::before, .glow::after{
+    content: "";
+    position: absolute;
+    left: -2px;
+    top:-2px;
+    background: linear-gradient(45deg, #e6fb04,#ff6600, #00ff66,#00ffff,#ff00ff,#ff0099,#6e0dd0,#ff3000,#099fff);
+    background-size: 400%;
+    width: calc(100% + 5px);
+    height: calc(100% + 5px);
+    z-index: -1;
+    animation: animate  20s linear infinite;
+}
+
+@keyframes animate{
+    0%{
+        background-position: 0 0;
+    }
+    50%{
+        background-position: 400% 0;
+    }
+    100%{
+        background-position: 0 0;
+    }
 }
 
 .main-content .three-2 img{
