--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ a{
     position: absolute;
     left: -2px;
     top:-2px;
-    background: linear-gradient(45deg, #e6fb04,#ff6600, #00ff66,#00ffff,#ff00ff,#ff0099,#6e0dd0,#ff3000,#099fff);
+    background: linear-gradient(45deg, black,darkgrey,black);
     background-size: 400%;
     width: calc(100% + 5px);
     height: calc(100% + 5px);
@@ -192,15 +192,16 @@ a{
 .main-content .three-3{
     display: flex;
     padding: 8px;
-    background:deeppink;
     justify-content: center;
     font-size: 2.1rem;
 }
 
 .main-content .three-3 h1{
-    border: 15px solid;
-    font-family:'Roboto Mono', sans-serif ;
-    color: white;
+    margin:0px;
+    font-family:brut, sans-serif ;
+    color: black;
+    transform: scale3d(1.5, 1.5, 1.5) translateY(-39px);
+    border-bottom: 10px solid;
 
 }
 
